[tool.poetry]
name = "exchange-photo"
version = "0.1.0"
description = ""
authors = ["jin <audwls624@gmail.com>"]
readme = "README.md"
packages = [{include = "exchange_photo"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
pymysql = "^1.1.0"
sqlalchemy = "^2.0.19"
cryptography = "^41.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
